--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,11 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.testproject"
+    package="com.superdupercharge"
     android:versionCode="1"
     android:versionName="1.0">
-
+     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <uses-sdk
         android:minSdkVersion="16"
@@ -19,8 +18,7 @@
       android:theme="@style/AppTheme">
 	<meta-data
      		android:name="com.google.android.geo.API_KEY"
-	android:value="AIzaSyApfTS8nD8AH1cF5Cw9oc1iLEdLY4oaZOA"/>
-
+     		android:value="AIzaSyDc4uc4L0H-uOvNwHYqv76ioFiqTcwtozM"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
