--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testproject",
+  "name": "SuperDuperCharge",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,24 +7,19 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "15.4.1",
+    "react": "15.4.2",
     "react-native": "0.40.0",
     "react-native-button": "^1.7.1",
     "react-native-maps": "^0.12.4",
-    "react-native-vector-icons": "^4.0.0",
-    "react-timer-mixin": "^0.13.3"
+    "react-native-vector-icons": "^4.0.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
     "babel-preset-react-native": "1.9.1",
     "jest": "18.1.0",
-    "react-test-renderer": "15.4.1"
+    "react-test-renderer": "15.4.2"
   },
   "jest": {
     "preset": "react-native"
-  },
-  "description": "testing",
-  "main": "index.android.js",
-  "author": "domen",
-  "license": "ISC"
+  }
 }
